allowed animateimg to bnow be an inherit image so that the padding could be viewed correctly and the image wouldnt be distorted to the left. no more animation happens when going through the page on this image

--- a/phonestyle.css
+++ b/phonestyle.css
@@ -50,8 +50,17 @@ body{
 }
 
 .divimg1 img {
-    border: solid red 2px;
     width: 80%;
+    margin: 5%;
+}
+
+.divimg1{
+    width: 100%;
+}
+/* ANIMATE IMG ANIMATE IMG ANIMATE IMG ANIMATE IMG ANIMATE IMG */
+/* this below allows the imgaes in divstyle 1 to not move and allow me to center the images */
+.animateimg{
+    position: inherit;
 }
 
 /* TEXT DROPDOWN BANNER TEXT DROPDOWN BANNER*/
